--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -75,6 +75,7 @@
       background: white;
       transform: rotate(45deg);
       transition: all .5s;
+      box-shadow: 0px 0px 1px #000;
     }
     &::after {
       content: "";
@@ -89,6 +90,7 @@
       border-radius: 50%;
       border: 2px solid white;
       transition: all .5s;
+      box-shadow: 0px 0px 3px #000;
     }
   }
   .search-input {
@@ -137,6 +139,7 @@
         background: white;
         border-radius: 0%;
         transform: rotate(-45deg);
+        box-shadow: 0px 0px 1px #000;
       }
     }
     &::placeholder {
